--- a/.choreo/component.yaml
+++ b/.choreo/component.yaml
@@ -1,6 +1,18 @@
 schemaVersion: 1.2
 
+endpoints: []
+
+
 dependencies:
     connectionReferences:
     - name: con1
       resourceRef: service:/default/parent/v1/8e755/PUBLIC
+
+configurations:
+  env:
+    - name: gitPAT
+      valueFrom:
+        configForm:
+          displayName: GitHub Personal Access Token
+          required: true
+          type: secret
